--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
       </div>
 
-      <hr style="width: 100%; text-align: left; margin-left: 0; color: hsl(215, 51%, 70%);">
+      <hr style="width: 100%; color: hsl(215, 51%, 70%);">
 
       <div class="creator-container">
         <img class="avatar" src="/images/image-avatar.png" alt="Avatar of the creator">
