Update to correct missing styles

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
       </div>
 
-      <hr style="width: 100%; color: hsl(215, 51%, 70%);">
+      <hr style="width: 100%; color: hsl(215, 51%, 70%); opacity: 20%;">
 
       <div class="creator-container">
         <img class="avatar" src="/images/image-avatar.png" alt="Avatar of the creator">
