Add image style

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <main>
     <div class="card">
-      <img src="images/image-equilibrium.jpg" alt="Fancy NFT image">
+      <img class="image" src="images/image-equilibrium.jpg" alt="Fancy NFT image">
       <h1 class="nft-name">Equilibrium #3429</h1>
       <p class="description">Our Equilibrium collection promotes balance and calm.</p>
       <div class="pricing-container">
