Add transition effect

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 <body>
   <main>
     <div class="card">
-      <img class="image" src="images/image-equilibrium.jpg" alt="Fancy NFT image">
+      <div class="image-overlay">
+        <img class="image" src="images/image-equilibrium.jpg" alt="Fancy NFT image">
+      </div>
       <h1 class="nft-name">Equilibrium #3429</h1>
       <p class="description">Our Equilibrium collection promotes balance and calm.</p>
       <div class="pricing-container">
@@ -47,12 +49,12 @@
     </div>
 
   </main>
-  <footer>
+  <!-- <footer>
     <div class="attribution">
       Challenge by <a rel="noopener" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend
         Mentor</a>.
       Coded by <a href="https://www.frontendmentor.io/profile/NationsAnarchy">Phúc Nguyễn</a>.
-  </footer>
+  </footer> -->
 
   </div>
 </body>
